media query iphone SE

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0753959a3d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style/style.css">
-    <title>Apple</title>
+    <title>Apple (Philippines)</title>
 </head>
 <body>
 
@@ -15,36 +15,37 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href=""><i class="fa-brands fa-apple"></i></a></li>
-                    <li><a href="#">Store</a></li>
-                    <li><a href="#">Mac</a></li>
-                    <li><a href="#">iPad</a></li>
-                    <li><a href="#">iPhone</a></li>
-                    <li><a href="#">Watch</a></li>
-                    <li><a href="#">Airpods</a></li>
-                    <li><a href="#">Tv & Home</a></li>
-                    <li><a href="#">Entertainment</a></li>
-                    <li><a href="#">Accessories</a></li>
-                    <li><a href="#">Support</a></li>
+                    <li class="logo"><a href=""><i class="fa-brands fa-apple"></i></a></li>
+                    <li class="categories"><a href="#">Store</a></li>
+                    <li class="categories"><a href="#">Mac</a></li>
+                    <li class="categories"><a href="#">iPad</a></li>
+                    <li class="categories"><a href="#">iPhone</a></li>
+                    <li class="categories"><a href="#">Watch</a></li>
+                    <li class="categories"><a href="#">Airpods</a></li>
+                    <li class="categories"><a href="#">Tv & Home</a></li>
+                    <li class="categories"><a href="#">Entertainment</a></li>
+                    <li class="categories"><a href="#">Accessories</a></li>
+                    <li class="categories"><a href="#">Support</a></li>
                     <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
                     <li><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-bars"></i></a></li>
                 </ul>
             </nav>
         </header>
 
         <main>
 
-            <article>
+            <article class="hero">
 
-                <section>
-                    <p><a href="#">Shop online</a> for fast, free delivery. Call us at 1800-1651-0525 or visit <a href="#">support</a></p>
+                <section class="text">
+                    <p><a href="#">Shop online</a> for fast, free delivery. Call us at 1800-1651-0525 or visit <a href="#">support.</a></p>
                 </section>
 
-                <section>
-                    <section>
+                <section class="ads ads_1">
+                    <section class="ad_message">
                         <h1>iPhone 14 Pro</h1>
-                        <h2>Pro. Beyond</h2>
-                        <section>
+                        <h2>Pro. Beyond.</h2>
+                        <section class="links">
                             <p><a href="#">Learn more</a> <i class="fa-solid fa-chevron-right"></i></p>
                             <p><a href="#">Buy</a> <i class="fa-solid fa-chevron-right"></i></p>
                         </section>
@@ -53,25 +54,31 @@
 
             </article>
 
-            <article>
-                <section>
-                    <h1>iPhone 14</h1>
-                    <h2>Big and Bigger</h2>
-                    <section>
-                        <p><a href="#">Learn more</a> <i class="fa-solid fa-chevron-right"></i></p>
-                        <p><a href="#">Buy</a> <i class="fa-solid fa-chevron-right"></i></p>
+            <article class="image_1">
+                <section class="ads ads_2">
+                    <section class="ad_message">
+                        <h1>iPhone 14</h1>
+                        <h2>Big and bigger</h2>
+                        <section class="links">
+                            <p><a href="#">Learn more</a> <i class="fa-solid fa-chevron-right"></i></p>
+                            <p><a href="#">Buy</a> <i class="fa-solid fa-chevron-right"></i></p>
+                        </section>
                     </section>
                 </section>
             </article>
 
-            <article>
-                <h1><i class="fa-brands fa-apple"></i>WATCH</h1>
-                <h3>SERIES 8</h3>
-                <h2>A healthy leap ahead</h2>
+            <article class="image_2">
+                <section class="ads ads_3">
+                    <section class="ad_message">
+                        <h1><i class="fa-brands fa-apple"></i>WATCH</h1>
+                        <h3>SERIES 8</h3>
+                        <h2>A healthy leap ahead</h2>
+                        <section class="links">
+                            <p><a href="#">Learn more</a> <i class="fa-solid fa-chevron-right"></i></p>
+                            <p><a href="#">Buy</a> <i class="fa-solid fa-chevron-right"></i></p>
+                        </section>
+                    </section>
 
-                <section>
-                    <p><a href="#">Learn more</a> <i class="fa-solid fa-chevron-right"></i></p>
-                    <p><a href="#">Buy</a> <i class="fa-solid fa-chevron-right"></i></p>
                 </section>
 
             </article>
